# htcondor-dags

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  NOTICE  README.md  codecov.yml  dr  mypy.ini  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  start-test-container.cmd
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  index.rst
examples/basic_diamond/: README.md  basic_diamond.dot  combine_counts.py  count_words.py  make_dag.py  split_words.py  words.txt
examples/delayed_diamond/: README.md  delayed_diamond.dot  make_analysis_dag.py  make_top_dag.py  split_words.py  words.txt
examples/mandelbrot/: Dockerfile  edit.cmd  mandelbrot-dag.ipynb  run.cmd
htcondor/dags/: dag.py  edges.py  formatter.py  node.py  rescue.py  utils.py  version.py  writer.py
htcondor_dags/: __init__.py  dag.py  edges.py  exceptions.py  formatter.py  node.py  rescue.py  utils.py  version.py  walk_order.py  writer.py
tests/: ci.sh  conftest.py  test_formatter.py  test_rescue.py  test_version.py
tests/_inf/: Dockerfile  condor_config.local  travis.sh
tests/dag/: test_duplicate_node_names.py  test_edge_containment.py  test_node_containment.py  test_node_selectors.py  test_walks.py
tests/dag_and_nodes/: test_dag_misc_methods.py  test_select_nodes.py  test_version.py
tests/integration/: conftest.py  test_basic_dags.py  test_config_commands.py  test_dag_misc_methods.py  test_duplicate_node_names.py  test_edges.py  test_final_node.py  test_grouper_edge.py  test_layer_and_subdag_edges.py  test_meta_commands.py  test_node_layer.py  (+5 more)
(+19 files in other folders)
