[metadata]
name = htcondor-dags
version = 0.3.0
author = Josh Karpel
author_email = josh.karpel@gmail.com
description = High-level tools for writing HTCondor DAG files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/htcondor/htcondor-dags
license = ASL 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing

[options]
packages =
    htcondor.dags
python_requires = >=3.6
install_requires =
    htcondor >= 8.8
    importlib-metadata ~= 1.0; python_version < "3.8"

[options.extras_require]
tests =
    pytest
    pytest-xdist
    pytest-mock
    coverage
    pytest-cov
    codecov
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autodoc_typehints
    pygments-github-lexers
    ipython
    nbsphinx
    nbstripout
    sphinx-click
    sphinx-issues
    sphinx-autobuild

[build]
force=1

[sdist]

[bdist_wheel]
universal = 1

[bdist_rpm]
release = 1
packager = Josh Karpel <josh.karpel@gmail.com>
